CRM Gain: $ 7.8 Win %: 72.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5
CRM Gain: $ -13.84 Win %: 54.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_TR_QP_DB30
CRM Gain: $ -3.62 Win %: 36.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_RV_TR_DB30
CRM Gain: $ 4.93 Win %: 54.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_RV_AV_DB30
CRM Gain: $ 11.68 Win %: 72.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_RV_AL_DB30
CRM Gain: $ -4.7 Win %: 27.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_RV_QP_DB30
CRM Gain: $ -1.64 Win %: 54.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_HM_TR_DB30
CRM Gain: $ 4.11 Win %: 63.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_HM_AV_DB30
CRM Gain: $ -14.86 Win %: 45.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_HM_QP_DB30
CRM Gain: $ 2.55 Win %: 45.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_IT_QL_DB30
CRM Gain: $ -1.19 Win %: 54.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_IT_QP_DB30
CRM Gain: $ 1.46 Win %: 45.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_TR_IR5
CRM Gain: $ -3.03 Win %: 54.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_TR_QP
CRM Gain: $ 0.01 Win %: 54.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_QP_IR5
CRM Gain: $ 4.77 Win %: 45.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_RV_TR
CRM Gain: $ -5.45 Win %: 27.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_RV_AV
CRM Gain: $ 10.66 Win %: 54.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_RV_AL
CRM Gain: $ 1.86 Win %: 45.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_RV_QP
CRM Gain: $ 4.45 Win %: 63.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_HM_TR
CRM Gain: $ -1.7 Win %: 36.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_HM_AV
CRM Gain: $ 3.61 Win %: 45.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_HM_AL
CRM Gain: $ -9.53 Win %: 45.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_HM_QP
CRM Gain: $ 6.21 Win %: 63.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_IT_QL
CRM Gain: $ 4.45 Win %: 90.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_IT_QP
CRM Gain: $ -15.2 Win %: 36.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_AO_AC
CRM Gain: $ -3.69 Win %: 54.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_QP_PM
CRM Gain: $ 2.89 Win %: 63.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_TR_TS
CRM Gain: $ 8.14 Win %: 45.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_RV
CRM Gain: $ 3.08 Win %: 63.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_IR5
CRM Gain: $ 3.81 Win %: 63.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_TR
CRM Gain: $ -9.37 Win %: 36.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_AV
CRM Gain: $ 4.22 Win %: 45.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_AL
CRM Gain: $ 1.5 Win %: 63.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_VI
CRM Gain: $ 6.99 Win %: 63.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_LI
CRM Gain: $ -4.99 Win %: 63.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_QP
CRM Gain: $ 0.92 Win %: 54.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_HM
CRM Gain: $ -20.91 Win %: 36.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_SS
CRM Gain: $ 11.09 Win %: 72.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_QL
CRM Gain: $ -0.44 Win %: 63.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_DB30
CRM Gain: $ 3.15 Win %: 54.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_AO
CRM Gain: $ 2.23 Win %: 72.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_AC
CRM Gain: $ 6.21 Win %: 63.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_IT
CRM Gain: $ -12.89 Win %: 18.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_PM
CRM Gain: $ 3.44 Win %: 72.00 in 11 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_TS
CRM Gain: $ -8.55 Win %: 18.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_TR_QP_DB8
CRM Gain: $ -9.12 Win %: 27.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_RV_TR_DB8
CRM Gain: $ -17.21 Win %: 27.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_RV_AV_DB8
CRM Gain: $ -5.13 Win %: 45.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_RV_AL_DB8
CRM Gain: $ -1.77 Win %: 63.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_RV_QP_DB8
CRM Gain: $ -7.16 Win %: 27.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_HM_TR_DB8
CRM Gain: $ -16.41 Win %: 27.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_HM_AV_DB8
CRM Gain: $ -3.9 Win %: 63.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_HM_QP_DB8
CRM Gain: $ 0.77 Win %: 36.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_IT_QL_DB8
CRM Gain: $ -2.52 Win %: 45.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_IT_QP_DB8
CRM Gain: $ -9.2 Win %: 27.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_TR_IR2
CRM Gain: $ -16.78 Win %: 18.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_TR_QP
CRM Gain: $ -25.68 Win %: 9.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_QP_IR2
CRM Gain: $ -11.58 Win %: 18.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_RV_TR
CRM Gain: $ -13.66 Win %: 36.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_RV_AV
CRM Gain: $ -6.88 Win %: 27.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_RV_AL
CRM Gain: $ -4.81 Win %: 54.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_RV_QP
CRM Gain: $ -12.93 Win %: 18.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_HM_TR
CRM Gain: $ -10.26 Win %: 36.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_HM_AV
CRM Gain: $ -5.77 Win %: 27.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_HM_AL
CRM Gain: $ -5.33 Win %: 54.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_HM_QP
CRM Gain: $ -1.44 Win %: 18.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_IT_QL
CRM Gain: $ 0.32 Win %: 63.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_IT_QP
CRM Gain: $ 0.4 Win %: 63.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_AO_AC
CRM Gain: $ -6.32 Win %: 54.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_QP_PM
CRM Gain: $ -11.3 Win %: 18.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_TR_TS
CRM Gain: $ 5.76 Win %: 54.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_RV
CRM Gain: $ -18.57 Win %: 18.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_IR2
CRM Gain: $ -11.3 Win %: 18.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_TR
CRM Gain: $ -13.08 Win %: 36.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_AV
CRM Gain: $ -6.07 Win %: 36.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_AL
CRM Gain: $ -5.42 Win %: 36.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_VI
CRM Gain: $ -8.04 Win %: 27.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_LI
CRM Gain: $ -5.44 Win %: 54.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_QP
CRM Gain: $ 0.3 Win %: 63.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_HM
CRM Gain: $ 10.14 Win %: 63.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_SS
CRM Gain: $ -8.81 Win %: 45.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_QL
CRM Gain: $ 7.52 Win %: 63.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_DB8
CRM Gain: $ 0.4 Win %: 63.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_AO
CRM Gain: $ 0.4 Win %: 63.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_AC
CRM Gain: $ -1.44 Win %: 18.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_IT
CRM Gain: $ -2.94 Win %: 54.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_PM
CRM Gain: $ 0.29 Win %: 63.00 in 11 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_TS
CRM Gain: $ -5.72 Win %: 36.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_TR_QP_DB8
CRM Gain: $ -2.73 Win %: 27.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_RV_TR_DB8
CRM Gain: $ -15.83 Win %: 18.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_RV_AV_DB8
CRM Gain: $ -6.39 Win %: 45.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_RV_AL_DB8
CRM Gain: $ 0.22 Win %: 63.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_RV_QP_DB8
CRM Gain: $ -6.64 Win %: 27.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_HM_TR_DB8
CRM Gain: $ -20.6 Win %: 9.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_HM_AV_DB8
CRM Gain: $ -1.53 Win %: 54.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_HM_QP_DB8
CRM Gain: $ -1.13 Win %: 45.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_IT_QL_DB8
CRM Gain: $ -2.4 Win %: 45.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_IT_QP_DB8
CRM Gain: $ -5.49 Win %: 45.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_TR_IR2
CRM Gain: $ -8.08 Win %: 36.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_TR_QP
CRM Gain: $ -2.04 Win %: 72.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_QP_IR2
CRM Gain: $ -3.77 Win %: 36.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_RV_TR
CRM Gain: $ -22.83 Win %: 27.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_RV_AV
CRM Gain: $ -17.74 Win %: 18.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_RV_AL
CRM Gain: $ -2.68 Win %: 54.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_RV_QP
CRM Gain: $ -8.82 Win %: 27.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_HM_TR
CRM Gain: $ -19.61 Win %: 27.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_HM_AV
CRM Gain: $ -24.45 Win %: 18.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_HM_AL
CRM Gain: $ -3.09 Win %: 45.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_HM_QP
CRM Gain: $ -2.4 Win %: 18.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_IT_QL
CRM Gain: $ 1.12 Win %: 72.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_IT_QP
CRM Gain: $ 1.84 Win %: 54.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_AO_AC
CRM Gain: $ -0.19 Win %: 63.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_QP_PM
CRM Gain: $ -5.1 Win %: 27.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_TR_TS
CRM Gain: $ 1.95 Win %: 54.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_RV
CRM Gain: $ 0.24 Win %: 54.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_IR2
CRM Gain: $ -5.1 Win %: 27.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_TR
CRM Gain: $ -21.63 Win %: 36.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_AV
CRM Gain: $ -26.44 Win %: 9.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_AL
CRM Gain: $ -4.82 Win %: 27.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_VI
CRM Gain: $ -8.51 Win %: 27.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_LI
CRM Gain: $ -1.79 Win %: 54.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_QP
CRM Gain: $ 0.78 Win %: 54.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_HM
CRM Gain: $ 9.05 Win %: 72.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_SS
CRM Gain: $ 0.35 Win %: 54.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_QL
CRM Gain: $ 5.97 Win %: 63.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_DB8
CRM Gain: $ 1.84 Win %: 54.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_AO
CRM Gain: $ 1.84 Win %: 54.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_AC
CRM Gain: $ -2.4 Win %: 18.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_IT
CRM Gain: $ -0.4 Win %: 63.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_PM
CRM Gain: $ 1.73 Win %: 54.00 in 11 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_TS
CRM Gain: $ -6.29 Win %: 36.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_TR_QP_DB30
CRM Gain: $ -6.08 Win %: 27.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_RV_TR_DB30
CRM Gain: $ -3.39 Win %: 27.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_RV_AV_DB30
CRM Gain: $ -1.7 Win %: 18.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_RV_AL_DB30
CRM Gain: $ -7.21 Win %: 27.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_RV_QP_DB30
CRM Gain: $ -3.12 Win %: 27.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_HM_TR_DB30
CRM Gain: $ 5.11 Win %: 36.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_HM_AV_DB30
CRM Gain: $ -2.01 Win %: 18.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_HM_QP_DB30
CRM Gain: $ -2.79 Win %: 18.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_IT_QL_DB30
CRM Gain: $ -3.44 Win %: 18.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_IT_QP_DB30
CRM Gain: $ -5.89 Win %: 18.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_TR_IR5
CRM Gain: $ -4.99 Win %: 36.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_TR_QP
CRM Gain: $ -3.45 Win %: 27.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_QP_IR5
CRM Gain: $ -6.61 Win %: 36.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_RV_TR
CRM Gain: $ -4.18 Win %: 36.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_RV_AV
CRM Gain: $ -3.4 Win %: 27.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_RV_AL
CRM Gain: $ -6.19 Win %: 36.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_RV_QP
CRM Gain: $ -3.82 Win %: 27.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_HM_TR
CRM Gain: $ 4.83 Win %: 36.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_HM_AV
CRM Gain: $ -0.86 Win %: 36.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_HM_AL
CRM Gain: $ -1.1 Win %: 27.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_HM_QP
CRM Gain: $ -1.14 Win %: 36.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_IT_QL
CRM Gain: $ -1.55 Win %: 36.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_IT_QP
CRM Gain: $ -4.76 Win %: 18.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_AO_AC
CRM Gain: $ 1.08 Win %: 63.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_QP_PM
CRM Gain: $ -5.14 Win %: 27.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_TR_TS
CRM Gain: $ -3.12 Win %: 36.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_RV
CRM Gain: $ -3.58 Win %: 27.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_IR5
CRM Gain: $ -5.14 Win %: 27.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_TR
CRM Gain: $ -4.95 Win %: 18.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_AV
CRM Gain: $ -1.6 Win %: 45.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_AL
CRM Gain: $ 1.88 Win %: 72.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_VI
CRM Gain: $ 0.05 Win %: 45.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_LI
CRM Gain: $ -1.64 Win %: 27.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_QP
CRM Gain: $ -0.39 Win %: 27.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_HM
CRM Gain: $ 2.82 Win %: 54.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_SS
CRM Gain: $ 0.75 Win %: 27.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_QL
CRM Gain: $ -0.91 Win %: 18.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_DB30
CRM Gain: $ -4 Win %: 27.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_AO
CRM Gain: $ 1.95 Win %: 45.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_AC
CRM Gain: $ -1.14 Win %: 36.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_IT
CRM Gain: $ 1.46 Win %: 63.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_PM
CRM Gain: $ 0.05 Win %: 27.00 in 11 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_TS
