CRM Gain: $ -0.68 Win %: 61.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3
CRM Gain: $ -8.56 Win %: 23.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_TR_QP_DB8
CRM Gain: $ -0.12 Win %: 30.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_RV_TR_DB8
CRM Gain: $ -20.78 Win %: 23.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_RV_AV_DB8
CRM Gain: $ 0.62 Win %: 46.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_RV_AL_DB8
CRM Gain: $ -3.54 Win %: 46.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_RV_QP_DB8
CRM Gain: $ -0.22 Win %: 30.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_HM_TR_DB8
CRM Gain: $ -25.23 Win %: 23.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_HM_AV_DB8
CRM Gain: $ -7.56 Win %: 53.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_HM_QP_DB8
CRM Gain: $ -4.99 Win %: 46.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_IT_QL_DB8
CRM Gain: $ -6.66 Win %: 53.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_IT_QP_DB8
CRM Gain: $ -0.36 Win %: 46.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_TR_IR2
CRM Gain: $ 3.74 Win %: 30.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_TR_TS
CRM Gain: $ -11.03 Win %: 30.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_TR_QP
CRM Gain: $ -29.93 Win %: 30.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_QP_IR2
CRM Gain: $ -0.15 Win %: 30.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_RV_TR
CRM Gain: $ -2.31 Win %: 46.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_RV_AV
CRM Gain: $ 0.76 Win %: 38.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_RV_AL
CRM Gain: $ -2.68 Win %: 38.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_RV_QP
CRM Gain: $ -2.69 Win %: 30.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_HM_TR
CRM Gain: $ -3.2 Win %: 46.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_HM_AV
CRM Gain: $ -1.95 Win %: 30.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_HM_AL
CRM Gain: $ -7.45 Win %: 38.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_HM_QP
CRM Gain: $ -7.68 Win %: 46.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_IT_QL
CRM Gain: $ -6.45 Win %: 38.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_IT_QP
CRM Gain: $ -4.32 Win %: 53.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_IT_TS
CRM Gain: $ -0.68 Win %: 61.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_AO_AC
CRM Gain: $ -7.62 Win %: 38.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_QP_PM
CRM Gain: $ -2.64 Win %: 53.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_AV_TS
CRM Gain: $ 3.24 Win %: 46.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_AL_TS
CRM Gain: $ 4.03 Win %: 38.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_RV
CRM Gain: $ -28.03 Win %: 30.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_IR2
CRM Gain: $ 4.33 Win %: 30.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_TR
CRM Gain: $ -2.31 Win %: 46.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_AV
CRM Gain: $ 3.0 Win %: 46.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_AL
CRM Gain: $ -9.68 Win %: 30.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_VI
CRM Gain: $ -12.24 Win %: 23.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_LI
CRM Gain: $ -6.45 Win %: 38.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_QP
CRM Gain: $ -2.05 Win %: 61.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_HM
CRM Gain: $ 13.08 Win %: 61.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_SS
CRM Gain: $ -7.83 Win %: 46.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_QL
CRM Gain: $ -1.0 Win %: 53.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_DB8
CRM Gain: $ -0.68 Win %: 61.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_AO
CRM Gain: $ -0.68 Win %: 61.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_AC
CRM Gain: $ -0.65 Win %: 61.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_IT
CRM Gain: $ 1.03 Win %: 38.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_PM
CRM Gain: $ -2.58 Win %: 61.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_TS
CRM Gain: $ -9.6 Win %: 30.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_TR_QP_DB8
CRM Gain: $ 0.19 Win %: 30.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_RV_TR_DB8
CRM Gain: $ -17.93 Win %: 23.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_RV_AV_DB8
CRM Gain: $ 5.45 Win %: 53.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_RV_AL_DB8
CRM Gain: $ -6.5 Win %: 38.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_RV_QP_DB8
CRM Gain: $ -3.76 Win %: 30.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_HM_TR_DB8
CRM Gain: $ -24.39 Win %: 23.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_HM_AV_DB8
CRM Gain: $ -9.23 Win %: 53.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_HM_QP_DB8
CRM Gain: $ -6.76 Win %: 46.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_IT_QL_DB8
CRM Gain: $ -8.02 Win %: 53.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_IT_QP_DB8
CRM Gain: $ 3.69 Win %: 46.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_TR_IR2
CRM Gain: $ 1.4 Win %: 30.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_TR_TS
CRM Gain: $ -17.74 Win %: 23.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_TR_QP
CRM Gain: $ -21.36 Win %: 15.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_QP_IR2
CRM Gain: $ -2.56 Win %: 23.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_RV_TR
CRM Gain: $ -12.31 Win %: 30.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_RV_AV
CRM Gain: $ -11.34 Win %: 23.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_RV_AL
CRM Gain: $ -7.18 Win %: 53.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_RV_QP
CRM Gain: $ -9.42 Win %: 23.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_HM_TR
CRM Gain: $ -14.43 Win %: 30.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_HM_AV
CRM Gain: $ -21.05 Win %: 15.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_HM_AL
CRM Gain: $ -10.46 Win %: 46.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_HM_QP
CRM Gain: $ -8.96 Win %: 46.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_IT_QL
CRM Gain: $ -9.14 Win %: 53.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_IT_QP
CRM Gain: $ -2.98 Win %: 61.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_IT_TS
CRM Gain: $ -7.45 Win %: 53.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_AO_AC
CRM Gain: $ -9.98 Win %: 30.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_QP_PM
CRM Gain: $ -16.43 Win %: 38.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_AV_TS
CRM Gain: $ -7.19 Win %: 30.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_AL_TS
CRM Gain: $ -4.66 Win %: 53.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_RV
CRM Gain: $ -11.74 Win %: 38.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_IR2
CRM Gain: $ -0.62 Win %: 30.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_TR
CRM Gain: $ -12.31 Win %: 30.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_AV
CRM Gain: $ -13.67 Win %: 23.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_AL
CRM Gain: $ -7.63 Win %: 23.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_VI
CRM Gain: $ -12.65 Win %: 23.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_LI
CRM Gain: $ -9.14 Win %: 53.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_QP
CRM Gain: $ -10.77 Win %: 53.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_HM
CRM Gain: $ 10.71 Win %: 69.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_SS
CRM Gain: $ -6.89 Win %: 46.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_QL
CRM Gain: $ -2.57 Win %: 53.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_DB8
CRM Gain: $ -7.45 Win %: 53.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_AO
CRM Gain: $ -7.45 Win %: 53.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_AC
CRM Gain: $ -6.49 Win %: 53.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_IT
CRM Gain: $ -4.91 Win %: 38.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_PM
CRM Gain: $ -2.77 Win %: 61.00 in 13 days with algo TB4_HS_QM_OB3_OS3_CB3_CS3_TS
CRM Gain: $ 13.71 Win %: 69.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_TR_QP_DB10
CRM Gain: $ 26.3 Win %: 92.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_RV_TR_DB10
CRM Gain: $ 23.05 Win %: 61.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_RV_AV_DB10
CRM Gain: $ 27.62 Win %: 76.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_RV_AL_DB10
CRM Gain: $ 18.22 Win %: 76.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_RV_QP_DB10
CRM Gain: $ 13.41 Win %: 76.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_HM_TR_DB10
CRM Gain: $ 24.06 Win %: 69.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_HM_AV_DB10
CRM Gain: $ 12.32 Win %: 69.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_HM_QP_DB10
CRM Gain: $ 19.2 Win %: 76.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_IT_QL_DB10
CRM Gain: $ 12.04 Win %: 61.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_IT_QP_DB10
CRM Gain: $ 14.04 Win %: 61.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_TR_IR3
CRM Gain: $ 12.08 Win %: 76.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_TR_TS
CRM Gain: $ 2.0 Win %: 38.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_TR_QP
CRM Gain: $ -0.27 Win %: 53.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_QP_IR3
CRM Gain: $ 20.78 Win %: 76.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_RV_TR
CRM Gain: $ 3.49 Win %: 38.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_RV_AV
CRM Gain: $ 19.56 Win %: 61.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_RV_AL
CRM Gain: $ 12.36 Win %: 53.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_RV_QP
CRM Gain: $ 13.27 Win %: 76.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_HM_TR
CRM Gain: $ 2.73 Win %: 46.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_HM_AV
CRM Gain: $ 11.6 Win %: 53.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_HM_AL
CRM Gain: $ 1.16 Win %: 61.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_HM_QP
CRM Gain: $ 19.07 Win %: 69.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_IT_QL
CRM Gain: $ 3.21 Win %: 53.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_IT_QP
CRM Gain: $ 12.21 Win %: 69.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_IT_TS
CRM Gain: $ -16.95 Win %: 30.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_AO_AC
CRM Gain: $ 0.88 Win %: 61.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_QP_PM
CRM Gain: $ -1.8 Win %: 38.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_AV_TS
CRM Gain: $ 10.4 Win %: 61.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_AL_TS
CRM Gain: $ 27.44 Win %: 76.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_RV
CRM Gain: $ 15.75 Win %: 53.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_IR3
CRM Gain: $ 17.99 Win %: 76.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_TR
CRM Gain: $ 3.14 Win %: 38.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_AV
CRM Gain: $ 20.04 Win %: 61.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_AL
CRM Gain: $ -0.88 Win %: 61.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_VI
CRM Gain: $ 12.44 Win %: 53.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_LI
CRM Gain: $ 3.21 Win %: 53.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_QP
CRM Gain: $ 10.5 Win %: 76.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_HM
CRM Gain: $ 14.64 Win %: 61.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_SS
CRM Gain: $ 19.69 Win %: 69.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_QL
CRM Gain: $ 20.85 Win %: 76.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_DB10
CRM Gain: $ 15.15 Win %: 46.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_AO
CRM Gain: $ 11.79 Win %: 61.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_AC
CRM Gain: $ 19.07 Win %: 69.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_IT
CRM Gain: $ 8.05 Win %: 69.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_PM
CRM Gain: $ 13.43 Win %: 69.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_TS
CRM Gain: $ -7.36 Win %: 23.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_TR_QP_DB10
CRM Gain: $ 7.68 Win %: 30.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_RV_TR_DB10
CRM Gain: $ -6.39 Win %: 30.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_RV_AV_DB10
CRM Gain: $ 7.71 Win %: 53.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_RV_AL_DB10
CRM Gain: $ 3.95 Win %: 61.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_RV_QP_DB10
CRM Gain: $ 0.28 Win %: 30.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_HM_TR_DB10
CRM Gain: $ 9.91 Win %: 46.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_HM_AV_DB10
CRM Gain: $ -0.29 Win %: 53.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_HM_QP_DB10
CRM Gain: $ 6.96 Win %: 69.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_IT_QL_DB10
CRM Gain: $ 1.25 Win %: 53.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_IT_QP_DB10
CRM Gain: $ -0.93 Win %: 30.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_TR_IR3
CRM Gain: $ 4.85 Win %: 38.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_TR_TS
CRM Gain: $ -10.21 Win %: 30.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_TR_QP
CRM Gain: $ -9.7 Win %: 23.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_QP_IR3
CRM Gain: $ 5.02 Win %: 38.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_RV_TR
CRM Gain: $ -12.27 Win %: 30.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_RV_AV
CRM Gain: $ 5.99 Win %: 61.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_RV_AL
CRM Gain: $ -1.47 Win %: 46.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_RV_QP
CRM Gain: $ 0.23 Win %: 38.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_HM_TR
CRM Gain: $ -3.74 Win %: 38.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_HM_AV
CRM Gain: $ -4.13 Win %: 46.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_HM_AL
CRM Gain: $ -6.98 Win %: 30.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_HM_QP
CRM Gain: $ -2.69 Win %: 53.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_IT_QL
CRM Gain: $ -6.56 Win %: 23.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_IT_QP
CRM Gain: $ 6.58 Win %: 61.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_IT_TS
CRM Gain: $ -23.42 Win %: 23.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_AO_AC
CRM Gain: $ 1.9 Win %: 61.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_QP_PM
CRM Gain: $ -11.04 Win %: 30.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_AV_TS
CRM Gain: $ 2.22 Win %: 53.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_AL_TS
CRM Gain: $ 12.04 Win %: 76.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_RV
CRM Gain: $ 0.84 Win %: 30.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_IR3
CRM Gain: $ 3.9 Win %: 38.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_TR
CRM Gain: $ -12.96 Win %: 30.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_AV
CRM Gain: $ 4.04 Win %: 53.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_AL
CRM Gain: $ -3.76 Win %: 46.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_VI
CRM Gain: $ -3.49 Win %: 38.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_LI
CRM Gain: $ -6.56 Win %: 23.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_QP
CRM Gain: $ 4.37 Win %: 61.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_HM
CRM Gain: $ 6.98 Win %: 46.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_SS
CRM Gain: $ -1.74 Win %: 53.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_QL
CRM Gain: $ 10.95 Win %: 76.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_DB10
CRM Gain: $ 5.19 Win %: 69.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_AO
CRM Gain: $ -1.94 Win %: 46.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_AC
CRM Gain: $ 7.73 Win %: 61.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_IT
CRM Gain: $ 2.65 Win %: 61.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_PM
CRM Gain: $ 9.76 Win %: 61.00 in 13 days with algo TB3_HL_HI_QM_OB3_OS3_CB3_CS3_TS
CRM Gain: $ -8.56 Win %: 23.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_TR_QP_DB8
CRM Gain: $ -0.12 Win %: 30.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_RV_TR_DB8
CRM Gain: $ -20.78 Win %: 23.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_RV_AV_DB8
CRM Gain: $ 0.62 Win %: 46.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_RV_AL_DB8
CRM Gain: $ -5.25 Win %: 53.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_RV_QP_DB8
CRM Gain: $ -0.22 Win %: 30.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_HM_TR_DB8
CRM Gain: $ -25.23 Win %: 23.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_HM_AV_DB8
CRM Gain: $ -7.56 Win %: 53.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_HM_QP_DB8
CRM Gain: $ -4.99 Win %: 46.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_IT_QL_DB8
CRM Gain: $ -6.66 Win %: 53.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_IT_QP_DB8
CRM Gain: $ -0.36 Win %: 46.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_TR_IR2
CRM Gain: $ 3.74 Win %: 30.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_TR_TS
CRM Gain: $ -11.03 Win %: 30.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_TR_QP
CRM Gain: $ -29.93 Win %: 30.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_QP_IR2
CRM Gain: $ -0.15 Win %: 30.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_RV_TR
CRM Gain: $ -2.31 Win %: 46.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_RV_AV
CRM Gain: $ 2.12 Win %: 38.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_RV_AL
CRM Gain: $ -2.68 Win %: 38.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_RV_QP
CRM Gain: $ -2.69 Win %: 30.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_HM_TR
CRM Gain: $ -3.2 Win %: 46.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_HM_AV
CRM Gain: $ -1.95 Win %: 30.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_HM_AL
CRM Gain: $ -7.45 Win %: 38.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_HM_QP
CRM Gain: $ -7.68 Win %: 46.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_IT_QL
CRM Gain: $ -6.45 Win %: 38.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_IT_QP
CRM Gain: $ -2.53 Win %: 61.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_IT_TS
CRM Gain: $ -0.68 Win %: 61.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_AO_AC
CRM Gain: $ -7.62 Win %: 38.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_QP_PM
CRM Gain: $ -2.64 Win %: 53.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_AV_TS
CRM Gain: $ 3.24 Win %: 46.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_AL_TS
CRM Gain: $ -0.14 Win %: 38.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_RV
CRM Gain: $ -28.03 Win %: 30.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_IR2
CRM Gain: $ 4.33 Win %: 30.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_TR
CRM Gain: $ -2.31 Win %: 46.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_AV
CRM Gain: $ 3.0 Win %: 46.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_AL
CRM Gain: $ -9.68 Win %: 30.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_VI
CRM Gain: $ -12.24 Win %: 23.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_LI
CRM Gain: $ -6.45 Win %: 38.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_QP
CRM Gain: $ -2.05 Win %: 61.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_HM
CRM Gain: $ 13.08 Win %: 61.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_SS
CRM Gain: $ -7.83 Win %: 46.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_QL
CRM Gain: $ -1.0 Win %: 53.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_DB8
CRM Gain: $ -0.68 Win %: 61.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_AO
CRM Gain: $ -0.68 Win %: 61.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_AC
CRM Gain: $ -0.65 Win %: 61.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_IT
CRM Gain: $ 1.03 Win %: 38.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_PM
CRM Gain: $ -2.58 Win %: 61.00 in 13 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_TS
