Gain: $ -0.32 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB3_OS3_CB1_CS1
Gain: $ -0.18 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB3_OS3_CB1_CS1_RV
Gain: $ -0.24 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB3_OS3_CB1_CS1_IR5
Gain: $ -0.49 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB3_OS3_CB1_CS1_TR
Gain: $ -0.75 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB3_OS3_CB1_CS1_AV
Gain: $ -0.04 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB3_OS3_CB1_CS1_VI
Gain: $ 0 Win %: 100.00 in 1 days with algo TB5_HL_LO_QM_OB3_OS3_CB1_CS1_AL
Gain: $ -0.29 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB3_OS3_CB1_CS1_LI
Gain: $ -0.67 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB3_OS3_CB1_CS1_QP
Gain: $ -0.32 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB3_OS3_CB1_CS1_HM
Gain: $ -0.07 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB3_OS3_CB1_CS1_SS
Gain: $ -0.32 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB3_OS3_CB1_CS1_QL
Gain: $ -0.32 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB3_OS3_CB1_CS1_DB6
Gain: $ -0.24 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB3_OS3_CB1_CS1_TR_IR5
Gain: $ -0.71 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB3_OS3_CB1_CS1_TR_QP
Gain: $ -0.09 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB3_OS3_CB1_CS1_QP_IR5
Gain: $ -0.49 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB3_OS3_CB1_CS1_RV_TR
Gain: $ 0 Win %: 100.00 in 1 days with algo TB5_HL_LO_QM_OB3_OS3_CB1_CS1_RV_TR_DB
Gain: $ -1776.07 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB3_OS3_CB1_CS1_RV_AV
Gain: $ -0.94 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB3_OS3_CB1_CS1_RV_AL
Gain: $ -0.67 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB3_OS3_CB1_CS1_RV_QP
Gain: $ -0.49 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB3_OS3_CB1_CS1_HM_TR
Gain: $ -0.75 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB3_OS3_CB1_CS1_HM_AV
Gain: $ -0.67 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB3_OS3_CB1_CS1_HM_QP
Gain: $ -0.98 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB2_OS2_CB1_CS1_RV
Gain: $ -0.24 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB2_OS2_CB1_CS1_IR5
Gain: $ -1.23 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB2_OS2_CB1_CS1_TR
Gain: $ -0.5 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB2_OS2_CB1_CS1_AV
Gain: $ -1.37 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB2_OS2_CB1_CS1_VI
Gain: $ 0.3 Win %: 100.00 in 1 days with algo TB5_HL_LO_QM_OB2_OS2_CB1_CS1_AL
Gain: $ -0.45 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB2_OS2_CB1_CS1_LI
Gain: $ -3.84 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB2_OS2_CB1_CS1_QP
Gain: $ -1 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB2_OS2_CB1_CS1_HM
Gain: $ -1.08 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB2_OS2_CB1_CS1_SS
Gain: $ -0.96 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB2_OS2_CB1_CS1_QL
Gain: $ -1 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB2_OS2_CB1_CS1_DB6
Gain: $ -0.24 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB2_OS2_CB1_CS1_TR_IR5
Gain: $ -2.76 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB2_OS2_CB1_CS1_TR_QP
Gain: $ -0.09 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB2_OS2_CB1_CS1_QP_IR5
Gain: $ -1.23 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB2_OS2_CB1_CS1_RV_TR
Gain: $ 0 Win %: 100.00 in 1 days with algo TB5_HL_LO_QM_OB2_OS2_CB1_CS1_RV_TR_DB
Gain: $ -0.4 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB2_OS2_CB1_CS1_RV_AV
Gain: $ 0.45 Win %: 100.00 in 1 days with algo TB5_HL_LO_QM_OB2_OS2_CB1_CS1_RV_AL
Gain: $ -3.82 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB2_OS2_CB1_CS1_RV_QP
Gain: $ -1.23 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB2_OS2_CB1_CS1_HM_TR
Gain: $ -0.5 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB2_OS2_CB1_CS1_HM_AV
Gain: $ -3.84 Win %: 0 in 1 days with algo TB5_HL_LO_QM_OB2_OS2_CB1_CS1_HM_QP
Gain: $ -0.18 Win %: 0 in 1 days with algo TB5_HL_HS_QM_OB3_OS3_CB2_CS2_RV
Gain: $ -0.24 Win %: 0 in 1 days with algo TB5_HL_HS_QM_OB3_OS3_CB2_CS2_IR5
Gain: $ -0.49 Win %: 0 in 1 days with algo TB5_HL_HS_QM_OB3_OS3_CB2_CS2_TR
Gain: $ -0.75 Win %: 0 in 1 days with algo TB5_HL_HS_QM_OB3_OS3_CB2_CS2_AV
Gain: $ -0.04 Win %: 0 in 1 days with algo TB5_HL_HS_QM_OB3_OS3_CB2_CS2_VI
Gain: $ -1.14 Win %: 0 in 1 days with algo TB5_HL_HS_QM_OB3_OS3_CB2_CS2_AL
Gain: $ -0.29 Win %: 0 in 1 days with algo TB5_HL_HS_QM_OB3_OS3_CB2_CS2_LI
Gain: $ -0.67 Win %: 0 in 1 days with algo TB5_HL_HS_QM_OB3_OS3_CB2_CS2_QP
Gain: $ -0.32 Win %: 0 in 1 days with algo TB5_HL_HS_QM_OB3_OS3_CB2_CS2_HM
Gain: $ -1776.07 Win %: 0 in 1 days with algo TB5_HL_HS_QM_OB3_OS3_CB2_CS2_SS
Gain: $ -0.32 Win %: 0 in 1 days with algo TB5_HL_HS_QM_OB3_OS3_CB2_CS2_QL
Gain: $ -0.32 Win %: 0 in 1 days with algo TB5_HL_HS_QM_OB3_OS3_CB2_CS2_DB6
Gain: $ -0.24 Win %: 0 in 1 days with algo TB5_HL_HS_QM_OB3_OS3_CB2_CS2_TR_IR5
Gain: $ -0.71 Win %: 0 in 1 days with algo TB5_HL_HS_QM_OB3_OS3_CB2_CS2_TR_QP
Gain: $ -0.09 Win %: 0 in 1 days with algo TB5_HL_HS_QM_OB3_OS3_CB2_CS2_QP_IR5
Gain: $ -0.49 Win %: 0 in 1 days with algo TB5_HL_HS_QM_OB3_OS3_CB2_CS2_RV_TR
Gain: $ 0 Win %: 100.00 in 1 days with algo TB5_HL_HS_QM_OB3_OS3_CB2_CS2_RV_TR_DB
Gain: $ -0.55 Win %: 0 in 1 days with algo TB5_HL_HS_QM_OB3_OS3_CB2_CS2_RV_AV
Gain: $ -0.94 Win %: 0 in 1 days with algo TB5_HL_HS_QM_OB3_OS3_CB2_CS2_RV_AL
Gain: $ -0.67 Win %: 0 in 1 days with algo TB5_HL_HS_QM_OB3_OS3_CB2_CS2_RV_QP
Gain: $ -0.49 Win %: 0 in 1 days with algo TB5_HL_HS_QM_OB3_OS3_CB2_CS2_HM_TR
Gain: $ -0.75 Win %: 0 in 1 days with algo TB5_HL_HS_QM_OB3_OS3_CB2_CS2_HM_AV
Gain: $ -0.67 Win %: 0 in 1 days with algo TB5_HL_HS_QM_OB3_OS3_CB2_CS2_HM_QP
Gain: $ 0.65 Win %: 100.00 in 1 days with algo TB5_HL_HS_QM_OB2_OS2_CB5_CS5_RV
Gain: $ -0.24 Win %: 0 in 1 days with algo TB5_HL_HS_QM_OB2_OS2_CB5_CS5_IR5
Gain: $ 0.65 Win %: 100.00 in 1 days with algo TB5_HL_HS_QM_OB2_OS2_CB5_CS5_TR
Gain: $ 0.65 Win %: 100.00 in 1 days with algo TB5_HL_HS_QM_OB2_OS2_CB5_CS5_AV
Gain: $ 0 Win %: 100.00 in 1 days with algo TB5_HL_HS_QM_OB2_OS2_CB5_CS5_VI
Gain: $ 0.65 Win %: 100.00 in 1 days with algo TB5_HL_HS_QM_OB2_OS2_CB5_CS5_AL
Gain: $ 0.65 Win %: 100.00 in 1 days with algo TB5_HL_HS_QM_OB2_OS2_CB5_CS5_LI
Gain: $ -0.1 Win %: 0 in 1 days with algo TB5_HL_HS_QM_OB2_OS2_CB5_CS5_QP
Gain: $ 0.65 Win %: 100.00 in 1 days with algo TB5_HL_HS_QM_OB2_OS2_CB5_CS5_HM
Gain: $ -0.24 Win %: 0 in 1 days with algo TB5_HL_HS_QM_OB2_OS2_CB5_CS5_SS
Gain: $ 0.65 Win %: 100.00 in 1 days with algo TB5_HL_HS_QM_OB2_OS2_CB5_CS5_QL
Gain: $ 0.65 Win %: 100.00 in 1 days with algo TB5_HL_HS_QM_OB2_OS2_CB5_CS5_DB6
Gain: $ -0.24 Win %: 0 in 1 days with algo TB5_HL_HS_QM_OB2_OS2_CB5_CS5_TR_IR5
Gain: $ -0.1 Win %: 0 in 1 days with algo TB5_HL_HS_QM_OB2_OS2_CB5_CS5_TR_QP
Gain: $ -0.09 Win %: 0 in 1 days with algo TB5_HL_HS_QM_OB2_OS2_CB5_CS5_QP_IR5
Gain: $ 0.65 Win %: 100.00 in 1 days with algo TB5_HL_HS_QM_OB2_OS2_CB5_CS5_RV_TR
Gain: $ 0 Win %: 100.00 in 1 days with algo TB5_HL_HS_QM_OB2_OS2_CB5_CS5_RV_TR_DB
Gain: $ 0 Win %: 100.00 in 1 days with algo TB5_HL_HS_QM_OB2_OS2_CB5_CS5_RV_AV
Gain: $ 0.65 Win %: 100.00 in 1 days with algo TB5_HL_HS_QM_OB2_OS2_CB5_CS5_RV_AL
Gain: $ -0.1 Win %: 0 in 1 days with algo TB5_HL_HS_QM_OB2_OS2_CB5_CS5_RV_QP
Gain: $ 0.65 Win %: 100.00 in 1 days with algo TB5_HL_HS_QM_OB2_OS2_CB5_CS5_HM_TR
Gain: $ 0.65 Win %: 100.00 in 1 days with algo TB5_HL_HS_QM_OB2_OS2_CB5_CS5_HM_AV
Gain: $ -181.63 Win %: 0 in 1 days with algo TB5_HL_HS_QM_OB2_OS2_CB5_CS5_HM_QP
